# planethinker_dragonlooker

./: .gitignore  CMakeLists.txt  README.md  big.json  generate_json.py  small.json  test.json
include/: expression.h  parser.h
src/: branchless.cpp  expression.cpp  main.cpp  parser.cpp
tests/: json_tests.cpp  parser_tests.cpp
